# flink-crawler

./: .gitignore  Dockerfile  Justfile  README.md
infra/: .terraform.lock.hcl  main.tf  provider.tf  values.yaml
infra/manifests/: deployment.yaml  example.yaml
jobs/: main.py  pyproject.toml
